source/spec/lib/cli/log/errors/codeFolderUndefined.coffee
'use strict'

module.exports = (dd) ->
  dd.drive
    it: 'returns `codeFolderUndefined` error message'
    i: []
    e: 'Code folder definition missing'
